# ODV999

./: .gitignore  HANDOFF.md  LICENSE  PUSH_INSTRUCTIONS.md  README.md  biohacking-decks.md  index.html  plaud-reference.md  sound-recognition-plan.md
ai-companion/: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE.ru.md  README.md  README.ru.md  docker-compose.yml  preview.html
ai-companion/backend/: Cargo.toml
ai-companion/backend/config/: development.yaml
ai-companion/backend/migration/: Cargo.toml
ai-companion/backend/migration/src/: lib.rs  m20240101_000001_users.rs  m20240101_000002_characters.rs  m20240101_000003_conversations.rs  m20240101_000004_messages.rs
ai-companion/backend/src/: app.rs  lib.rs
ai-companion/backend/src/controllers/: auth.rs  characters.rs  chat.rs  mod.rs
ai-companion/backend/src/models/: characters.rs  conversations.rs  messages.rs  mod.rs  users.rs
ai-companion/backend/src/services/: llm.rs  mod.rs
assets/: dashboard-nav.js  inject-overlay.js
dashboards/: biochemistry-first.html  crisis-navigator.html  example.html  five-pillars-audit.html  four-horsemen-test.html  magic-6-hours-tracker.html  magic-ratio-counter.html  narcissist-test.html  phubbing-tracker.html  relation-guide.html  relation-os-cheatsheet.html  relation-os-overview.html  repair-base-valya.html  state-of-the-union.html  therapy-speak-detector.html
essays/: cyclical-history.html
nzt/: .staticrypt.json  index.html
nzt-games/: index.html
nzt-kitchen/: index.html
relation-os/: index.html
typerighting/: index.html  landing.html  sw.js  (+1 more)
(+158 files in other folders)
